--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,27 @@ body {
     line-height: 1.7;
 }
 
+.navbar {
+    padding: 0px 150px;
+}
+
+.outer-container {
+    border-radius: 52px;
+    background: #d3d9f2;
+    box-shadow:  13px 13px 21px #777777,
+                -13px -13px 21px #ffffff;
+    max-width: 800px;
+    min-height: 400px;
+}
+
+.profile-img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 4px solid rgba(255,255,255,0.7);
+}
+
 /* Layout */
 .content-wrapper {
     max-width: 1000px;
