amend button colors

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,7 @@ body {
 
 .btn-main{
     background:var(--accent);
-    color:white;
+    color:black;
     padding:12px 24px;
     border-radius:10px;
     text-decoration:none;
