add border to button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,7 @@ body {
 .btn-main:hover{
     background: white;
     color: var(--accent);
-    border: var(--accent);
+    border: 1px solid var(--accent);
 }
 
 .btn-secondary{
