--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,7 @@ body {
     background: white;
     color: var(--accent);
     border: 1px solid var(--accent);
+    text-decoration: none;
 }
 
 .btn-secondary{
