amend button hover

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,7 +82,7 @@ body {
 
 .btn-main:hover{
     background: var(--highlight);
-    color: var(--accent);
+    color: #657562;
     border: 2px solid var(--accent);
     text-decoration: none;
 }
