Amend secondary button hover

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,7 +96,7 @@ body {
 }
 
 .btn-secondary:hover {
-    background:var(--ink);
+    background: #657562;
     color:var(--highlight);
     text-decoration: none;
 }
