--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,14 +89,14 @@ body {
 
 .btn-secondary{
     background:var(--highlight);
-    color:var(--ink);
+    color:var(--accent);
     padding:12px 24px;
     border-radius:10px;
     text-decoration:none;
 }
 
 .btn-secondary:hover {
-    background: #657562;
+    background: var(--accent);
     color:var(--highlight);
     text-decoration: none;
 }
