--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,8 +24,8 @@ body {
 
 .hero-wrapper{
     max-width:1000px;
-    margin:60px auto;
-    padding:60px;
+    margin:10px auto;
+    padding:20px 40px;
     background:white;
     border-radius:24px;
 }
